<resources>
    <string name="app_name">SeekDish</string>
    <string name="discover">Discover</string>
    <string name="rate">Rate</string>
    <string name="walk_descrp_1">Seekdish is a free application on smartphone that allows its user to find the dishes offered by the reffernced restaurants. Corresponding most to their tastes.</string>
    <string name="walk_sub1">How it works?</string>
    <string name="walk_sub_part2">The user will indicate to the application dishes or ingredients that he likes or does
        not like. SeekDish\'s taste analytics engine will use this data to offer compatible dishes in restaurant around
        of the user.
    </string>
    <string name="walk_third">But you can also ask SeekDish and recommend dishes you have never tasted. Here again the
        community of lovers of these dishes in SeekDish will take you to the restaurant with the best ratings.
    </string>
    <string name="walk_sub_23">The more user search for and rate dishes,the more SeekDish can recommend dishes that have
        appeared to other users with similar tastes.
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_15">(15)</string>
    <string name="opinion_1">Opinions</string>
    <string name="check_connection">Please check Internet Connection.</string>
    <string name="error_occured">Error Occured! Try Later. Error code:</string>
    <string name="facebook_app_id" translatable="false">354887285188219</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb354887285188219</string>
    <string name="CONSUMER_KEY">1ARBEdNpT5aQVFC93wkU0QBDJ</string>
    <string name="CONSUMER_SECRET">qXMNaxLuuaXBgQshSBYACNbdybFM9WrmLc17EGvvWOr6otg7DQ</string>
    <string name="google_maps_api">AIzaSyBnyvVgmXQHim-47zELq4zBH2KwSAOciuk</string>
    <string name="setting_saved">Setting have been saved.</string>
    <string name="no_meals_found">No meals found at your location. Change your location in Settings.</string>
    <string name="no_restro_found">No restaurant found at your location. Change your location in Settings.</string>
    <string name="no_todo_list">You have not added anything to Todo List for now.</string>
    <string name="no_fav_list">You have not added anything to Favorite List for now.</string>
    <string name="no_one_found">No one found.</string>
    <string name="no_meal_found">No meal available of this kind.</string>
    <string name="no_rest_found">No restaurant available of this kind.</string>
    <string name="no_todo">No item found.</string>
    <string name="change_password">Change Password</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="my_check_in_list">My Check-in List</string>
    <string name="no_checkin_yet">No Checkin Yet.</string>
    <string name="search_meal">Search Meal</string>
    <string name="registered_meals">Registered Meals</string>
    <string name="not_found">Not Found</string>
    <string name="contact_details">Contact Details</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_skype_id">Enter Skype id</string>
    <string name="enter_facebook_profile">Enter Facebook Profile</string>
    <string name="enter_twitter_profile">Enter Twitter Profile</string>
    <string name="my_friends">My Friends</string>
    <string name="search_friends_contacts_or_relative_who_already_use_seekdish">Search friends, Contacts or relative who already use Seekdish</string>
    <string name="no_alerts_yet">No Alerts Yet.</string>
    <string name="actions">Actions</string>
    <string name="details">Details</string>
    <string name="restaurant">Restaurant</string>
    <string name="budget">Budget</string>
    <string name="calories">Calories</string>
    <string name="number_of_person">Number of person</string>
    <string name="status">Status</string>
    <string name="speed_of_service">Speed of Service</string>
    <string name="prepration_time">Preparation Time</string>
    <string name="intolerance">Intolerance</string>
    <string name="tags">Tags</string>
    <string name="seasonality">Seasonality</string>
    <string name="type_of_dish">Type of Dish</string>
    <string name="i_dislike">I Dislike</string>
    <string name="add">Add</string>
    <string name="search_friends">Search Friends</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="info">Info</string>
    <string name="friends">Friends</string>
    <string name="check_in">Check-in</string>
    <string name="contact">Contact</string>
    <string name="do_not_consider_my_profile">Do not consider my profile</string>
    <string name="confirm">Confirm</string>
    <string name="include_friends">Include Friends</string>
    <string name="selected">Selected</string>
    <string name="settings">Settings</string>
    <string name="allow_invitations">Allow Invitations</string>
    <string name="validity_of_invitation">Validity of invitation</string>
    <string name="hour">hour</string>
    <string name="select_language">Select Language</string>
    <string name="next">Next</string>
    <string name="select_language_D">Select language</string>
    <string name="i_like">I Like</string>
    <string name="search_ingredients">Search Ingredients</string>
    <string name="validate">Validate</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="meal_rating">Meal Rating</string>
    <string name="taste">Taste</string>
    <string name="presentation">Presentation</string>
    <string name="texture">Texture</string>
    <string name="odor">Odor</string>
    <string name="my_alert">My Alert</string>
    <string name="search_restaurant">Search restaurant</string>
    <string name="my_informations">My Informations</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="bio">Bio</string>
    <string name="my_profile">My Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="opinion">Opinions</string>
    <string name="service">Service</string>
    <string name="decor">Decor</string>
    <string name="cleaniness">Cleaniness</string>
    <string name="ambience">Ambience</string>
    <string name="radius_center">Radius Center</string>
    <string name="add_address">Add Address</string>
    <string name="select_current_location">Select Current Location</string>
    <string name="received_friend_request">Received Friend Request</string>
    <string name="no_request_found">No Request Found</string>
    <string name="reset_password">Reset Password</string>
    <string name="random_password">Random Password</string>
    <string name="restaurant_rating">Restaurant Rating</string>
    <string name="sent_friend_request">Sent Friend Request</string>
    <string name="phone_number">Phone Number</string>
    <string name="bio_optional">Bio (Optional)</string>
    <string name="by_signing_to_the_seekdish_i_accept_the">By signing to the Seekdish, I accept the</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">&#160; and &#160;</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="seekdish">SeekDish</string>
    <string name="perfect_register">Perfect! Register</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="ok">Ok</string>
    <string name="share">Share</string>
    <string name="add_to_my_list_to_do">Add to my list \'to do\'</string>
    <string name="add_to_my_list_favourite">Add to my list \'favourite\'</string>
    <string name="view_detailed_restaurants">View Detailed Restaurants</string>
    <string name="show_on_map">Show on Map</string>
    <string name="cancel">Cancel</string>
    <string name="add_alert">Follow</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="comment_here">Comment here</string>
    <string name="nobody_invited_yet">Nobody invited yet.</string>
    <string name="cold_entrance">Cold Entrance</string>
    <string name="connect_with">"Connect with "</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="proximity">Proximity</string>
    <string name="general">General</string>
    <string name="geolocation">Geolocation</string>
    <string name="push_notification">Push Notification</string>
    <string name="private_m">Private</string>
    <string name="search_radius">Search Radius</string>
    <string name="km">Km</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="update_my_profile">Update My Profile</string>
    <string name="add_friends">Add Friends</string>
    <string name="alert">Alert</string>
    <string name="managing_alerts">Managing Alerts</string>
    <string name="main_dish">Main Dish</string>
    <string name="after_having_eaten_the_user_will_be_able_to_also_note_his_dish_as_well_as_the_restaturant_according_to_four_criteria">After having eaten, the user will be able to also note his dish as well as the restaturant according to four criteria</string>
    <string name="color">Color</string>
    <string name="remove">Remove</string>
    <string name="follow">Follow</string>
    <string name="add_friend">Add Friend</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="time">Time</string>
    <string name="map">Map</string>
    <string name="ingre">Ingredients</string>
    <string name="opini">Opinion</string>
    <string name="simi">Similar</string>
    <string name="invited">Invited</string>
    <string name="lists">List</string>
    <string name="friendsss">Friends</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="meals">Meals</string>
    <string name="similar">Similar</string>
    <string name="please_fill_email">Please fill email.</string>
    <string name="fill_email">Please fill random password provided on email.</string>
    <string name="fill_new_pass">Please fill new password</string>
    <string name="fill_confirm_pass">Please fill confirm password</string>
    <string name="pass_not_match">Password and Confirm Password doesn\'t match.</string>
    <string name="fill_first">Enter First Name</string>
    <string name="fill_last">Enter Last Name</string>
    <string name="valid_email">Enter valid Email Id</string>
    <string name="fav_menu">Favorite Dish</string>
    <string name="todo">Todo</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
</resources>