<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/left_menu_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_restaurants"
                android:icon="@drawable/left_menu_restaurants"
                android:title="@string/restaurant"/>
        <item
                android:id="@+id/nav_my_friends"
                android:icon="@drawable/left_menu_friends"
                android:title="@string/my_friends"/>
        <item
                android:id="@+id/nav_favorite_menu"
                android:icon="@drawable/left_menu_favorites"
                android:title="@string/fav_menu"/>
        <item
                android:id="@+id/nav_todo"
                android:icon="@drawable/left_menu_todo"
                android:title="@string/todo"/>

        <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/left_menu_notifications"

                android:title="@string/notifications"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/left_menu_settings"
                android:title="@string/settings"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/left_menu_logout"
                android:title="@string/logout"/>

    </group>


</menu>
