<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"

        tools:context=".ui.ForgotActivity">
    <!--toolbar-->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:gravity="center"
                 android:background="@color/colorPrimary"
                 android:orientation="horizontal">

        <TextView
                android:id="@+id/tvSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:layout_gravity="end|center_vertical"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/forgot_password"
                  android:textColor="@color/white"
                  android:textSize="20sp"/>
        <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:layout_gravity="start|center_vertical"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="18sp"/>
    </FrameLayout>

    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/edtForgotEmail"
                android:layout_width="match_parent"
                  android:inputType="textEmailAddress"
                  android:layout_height="48dp"
                  android:hint="@string/enter_email"
                  android:paddingStart="8dp" android:background="@color/edt_light_gray"
        />

    </LinearLayout>
</LinearLayout>