<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context=".ui.signup.SignupActivity">

    <!--toolbar-->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:gravity="center"
                 android:background="@color/colorPrimary"
                 android:orientation="horizontal">

        <TextView
                android:id="@+id/tvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:layout_gravity="end|center_vertical"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:layout_gravity="start|center_vertical"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="18sp"/>
    </FrameLayout>


    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <!--//parent layout-->
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/ic_user"
                        app:civ_border_color="#ffffff"
                        app:civ_border_width="6dp"/>
            </LinearLayout>


            <!--first name and last name-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                <EditText
                        android:id="@+id/edtFirstName" android:layout_width="0dp"
                        android:inputType="text"
                        android:layout_height="match_parent"
                        android:hint="@string/first_name"
                        android:paddingStart="8dp" android:background="@color/edt_light_gray"
                        android:layout_weight=".99"/>
                <View android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="0.02"/>
                <EditText
                        android:id="@+id/edtLastName"
                        android:layout_width="0dp"
                          android:inputType="text"
                          android:paddingStart="8dp"
                          android:layout_height="match_parent"
                          android:hint="@string/last_name"
                          android:background="@color/edt_light_gray"
                          android:layout_weight="0.99"/>
            </LinearLayout>


            <!--email-->
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="0dp"
                          android:inputType="text"
                          android:layout_height="match_parent"
                          android:hint="@string/email"
                          android:paddingStart="8dp" android:background="@color/edt_light_gray"
                          android:layout_weight="2"/>

            </LinearLayout>

            <!--phone number-->
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                <com.hbb20.CountryCodePicker
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight=".6"
                        android:id="@+id/ccp"
                        android:layout_width="0dp"
                        android:background="@color/edt_light_gray"
                        android:layout_height="match_parent"
                        app:ccpDialog_keyboardAutoPopup="false"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_hintExampleNumber="true"
                        app:ccp_showFlag="true"
                        app:ccp_showFullName="false"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="true"
                        app:ccp_textSize="14sp"/>

                <EditText android:layout_width="0dp"
                          android:id="@+id/edtPhone"
                          android:inputType="number"
                          android:paddingStart="8dp"
                          android:maxLength="10"
                          android:layout_height="match_parent"
                          android:hint="@string/phone_number"
                          android:background="@color/edt_light_gray"
                          android:layout_weight="1.4"/>
            </LinearLayout>


            <!--password-->
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="0dp"
                          android:inputType="textPassword"
                          android:layout_height="match_parent"
                          android:hint="@string/password"
                          android:paddingStart="8dp" android:background="@color/edt_light_gray"
                          android:layout_weight=".99"/>
                <View android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="0.02"/>
                <EditText

                        android:id="@+id/edtConfirmPasword" android:layout_width="0dp"
                          android:inputType="textPassword"
                          android:paddingStart="8dp"
                          android:layout_height="match_parent"
                          android:hint="@string/confirm"
                          android:background="@color/edt_light_gray"
                          android:layout_weight="0.99"/>
            </LinearLayout>


            <!--username-->
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="0dp"
                          android:inputType="text"
                          android:layout_height="match_parent"
                          android:hint="@string/username"
                          android:paddingStart="8dp" android:background="@color/edt_light_gray"
                          android:layout_weight="2"/>

            </LinearLayout>
            <!--gender-->
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                <Spinner
                        android:background="@color/edt_light_gray"
                        android:id="@+id/spinnerGender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp"/>

            </LinearLayout>

            <!--Bio-->
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                <EditText
                        android:id="@+id/edtBio"
                        android:layout_width="0dp"
                          android:inputType="text"
                          android:layout_height="match_parent"
                          android:hint="@string/bio_optional"
                          android:paddingStart="8dp" android:background="@color/edt_light_gray"
                          android:layout_weight="2"/>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:layout_marginTop="10dp"
                          android:layout_marginBottom="10dp"
                          android:layout_gravity="center"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:textSize="16sp"
                          android:gravity="center"
                          android:layout_gravity="center"
                          android:layout_height="wrap_content"
                          android:text="@string/by_signing_to_the_seekdish_i_accept_the"/>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center"
                              android:gravity="center"
                              android:orientation="horizontal">
                    <TextView
                            android:textSize="16sp"

                            android:id="@+id/tvTerms"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_of_use"/>
                    <TextView
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/and"/>
                    <TextView
                            android:textSize="16sp"

                            android:id="@+id/tvPolicy"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/privacy_policy"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>