<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <!--toolbar-->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:gravity="center"
                 android:background="@color/colorPrimary"
                 android:orientation="horizontal">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/my_check_in_list"
                  android:textColor="@color/white"
                  android:textSize="20sp"/>
        <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:layout_gravity="start|center_vertical"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="18sp"/>
    </FrameLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_checkin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView android:layout_width="wrap_content"
            android:id="@+id/tvCheckinAlert"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistantregular"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/no_checkin_yet"
            />

    </FrameLayout>


</LinearLayout>
